@@ -1404,6 +1404,10 @@
 //-- AB_SECRAMENT
 2515,2000,500,0,0,60000:90000:120000:150000:180000,0
 
+//==== Royal Guard skills ==================
+//-- LG_FORCEOFVANGUARD
+2313,0,0,0,0,120000,0
+
 //==== Wanderer skills =====================
 //-- WA_SWING_DANCE
 2350,1000,1000,0,0,100000:150000:200000:250000:300000,0
