@@ -956,13 +956,13 @@
 
 // Royal Guard
 2307,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_CANNONSPEAR,Cannon Spear
-2308,7,6,1,0,0,0,10,1,no,0,0,0,none,0,		LG_BANISHINGPOINT,Banishing Point
+2308,0,0,0,0,0,0,10,0,no,0,0,0,none,0,		LG_BANISHINGPOINT,Banishing Point
 2309,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_TRAMPLE,Trample
 2310,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_SHIELDPRESS,Shield Press
 2311,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_REFLECTDAMAGE,Reflect Damage
 2312,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_PINPOINTATTACK,Pinpoint Attack
-2313,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_FORCEOFVANGUARD,Force of Vanguard
-2314,0,0,0,0,0,0,1,0,no,0,0,0,none,0,		LG_RAGEBURST,Rage Burst
+2313,0,6,4,0,0x01,0,5,1,no,0,0,0,weapon,0,		LG_FORCEOFVANGUARD,Force of Vanguard
+2314,2,6,1,0,0,0,1,1,no,0,0,0,weapon,0,		LG_RAGEBURST,Rage Burst
 2315,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		LG_SHIELDSPELL,Shield Spell
 2316,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_EXEEDBREAK,Exceed Break
 2317,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_OVERBRAND,Over Brand
